--- a/themes/basic/layouts/partials/navbar.html
+++ b/themes/basic/layouts/partials/navbar.html
@@ -10,6 +10,9 @@
       <a href="/about">About</a>
     </li>
     <li>
+      <a href="/compatibility">Compatibility</a>
+    </li>
+    <li>
       <a href="/download">Download</a>
     </li>
     <li>
