Remove css class from image in index.

--- a/themes/basic/layouts/index.html
+++ b/themes/basic/layouts/index.html
@@ -1,7 +1,3 @@
 {{ define "main" }} {{ .Content }}
-<img
-  src="/img/Dayto2PE_InYourFace_1024x723_Low.jpg"
-  alt="Daytona 2"
-  class="index_image"
-/>
+<img src="/img/Dayto2PE_InYourFace_1024x723_Low.jpg" alt="Daytona 2" />
 {{ end }}
