Wrap footer & navbar in containers.

--- a/themes/basic/layouts/partials/footer.html
+++ b/themes/basic/layouts/partials/footer.html
@@ -1,9 +1,11 @@
-<footer>
-  <small
-    >&copy; Copyright 2011 - {{ now.Format "2006" }} by Bart
-    Trzynadlowski.</small
-  >
-  <small
-    >Supermodel is neither affiliated with nor endorsed by Sega Corp.</small
-  >
+<footer class="footer">
+  <div class="container">
+    <small
+      >&copy; Copyright 2011 - {{ now.Format "2006" }} by Bart
+      Trzynadlowski.</small
+    >
+    <small
+      >Supermodel is neither affiliated with nor endorsed by Sega Corp.</small
+    >
+  </div>
 </footer>
