--- a/themes/basic/layouts/partials/navbar.html
+++ b/themes/basic/layouts/partials/navbar.html
@@ -1,25 +1,27 @@
-<nav>
-  <ul>
-    <li>
-      <a href="/">Home</a>
-    </li>
-    <li>
-      <a href="/blog">Blog</a>
-    </li>
-    <li>
-      <a href="/about">About</a>
-    </li>
-    <li>
-      <a href="/compatibility">Compatibility</a>
-    </li>
-    <li>
-      <a href="/download">Download</a>
-    </li>
-    <li>
-      <a href="/contact">Contact</a>
-    </li>
-    <li>
-      <a href="/Forum">Forum</a>
-    </li>
-  </ul>
+<nav class="navbar">
+  <div class="container">
+    <ul>
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/blog">Blog</a>
+      </li>
+      <li>
+        <a href="/about">About</a>
+      </li>
+      <li>
+        <a href="/compatibility">Compatibility</a>
+      </li>
+      <li>
+        <a href="/download">Download</a>
+      </li>
+      <li>
+        <a href="/contact">Contact</a>
+      </li>
+      <li>
+        <a href="/Forum">Forum</a>
+      </li>
+    </ul>
+  </div>
 </nav>
