Fix styling of site up to now.

--- a/themes/basic/static/css/styles.css
+++ b/themes/basic/static/css/styles.css
@@ -1,3 +1,5 @@
+/* Custom CSS Reset from: https://www.joshwcomeau.com/css/custom-css-reset/ */
+
 /*
   1. Use a more-intuitive box-sizing model.
 */
@@ -78,12 +80,15 @@ ul {
   padding: 0;
 }
 
-/* Custom CSS here */
+/* End custom CSS Reset */
 
 /* CSS Variables */
+
 :root {
   --supermodel_pink: #f060a0;
 }
+
+/* End CSS Variables */
 
 body {
   min-height: 100vh;
@@ -92,32 +97,50 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.main {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
 h2 {
   color: var(--supermodel_pink);
 }
 
-nav,
-footer {
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    width: 1200px;
+  }
+}
+
+.navbar {
+  position: sticky;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 16px;
+}
+
+.navbar,
+.footer {
   background-color: var(--supermodel_pink);
   text-align: center;
 }
 
-nav .logo {
-  height: 4rem;
-  width: 4rem;
-  margin-top: auto;
-  margin-bottom: auto;
-  border-radius: 9999px;
-}
-
-nav .social_icon {
-  height: 2rem;
-  width: 2rem;
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-footer {
+.footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -125,13 +148,13 @@ footer {
   min-height: 3rem;
 }
 
-footer small {
+.footer div small {
   color: white;
   margin-top: auto;
   margin-bottom: auto;
 }
 
-nav ul {
+.navbar div ul {
   display: flex;
   height: 100%;
   flex-direction: column;
@@ -141,51 +164,24 @@ nav ul {
   margin-bottom: auto;
 }
 
-nav ul li {
+.navbar div ul li {
   flex: 1;
   list-style: none;
   margin-top: auto;
   margin-bottom: auto;
 }
 
-nav ul li a {
+.navbar div ul li a {
   text-decoration: none;
   color: white;
 }
 
-nav ul li a:hover {
+.navbar div ul li a:hover {
   filter: opacity(70%);
 }
 
-.content {
-  padding: 1rem 2rem;
-}
-
 @media screen and (min-width: 768px) {
-  nav {
-    min-height: 6rem;
-  }
-  nav ul {
+  .navbar div ul {
     flex-direction: row;
   }
-
-  nav,
-  footer {
-    padding-left: 10rem;
-    padding-right: 10rem;
-  }
-
-  .content {
-    padding: 1rem 10rem;
-  }
 }
-
-.index_image {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 60%;
-  height: auto;
-}
-
-/* Custom CSS End */
