--- a/themes/basic/layouts/partials/footer.html
+++ b/themes/basic/layouts/partials/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div class="container">
     <small
-      >&copy; Copyright 2011 - {{ now.Format "2006" }} by Bart
-      Trzynadlowski.</small
+      >&copy; Copyright 2011 - {{ now.Format "2006" }} by
+      <a href="https://www.trzy.org/">Bart Trzynadlowski.</a></small
     >
     <small
       >Supermodel is neither affiliated with nor endorsed by Sega Corp.</small
